--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -106,6 +106,9 @@
       {% if author.googlescholar %}
         <li><a href="{{ author.googlescholar }}"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a></li>
       {% endif %}
+      {% if author.uri %}
+          <li><a href="{{ author.uri }}"><i class="ai ai-semantic-scholar ai-fw"></i> Semantic Scholar</a></li>
+      {% endif %}
       {% if author.pubmed %}
         <li><a href="{{ author.pubmed }}"><i class="ai ai-pubmed-square ai-fw"></i> PubMed</a></li>
       {% endif %}
@@ -120,9 +123,9 @@
 {% endif %}
     </ul>
       <div class="author__urls_sm">
-      {% if author.uri %}
+      <!-- {% if author.uri %}
         <a href="{{ author.uri }}"><i class="fas fa-fw fa-link" aria-hidden="true"></i></a>
-      {% endif %}
+      {% endif %} -->
       {% if author.email %}
         <a href="mailto:{{ author.email }}"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i></a>
       {% endif %}
